corsenet
Traceback (most recent call last):

  File ~\AppData\Local\miniforge3\Lib\site-packages\IPython\core\interactiveshell.py:3577 in run_code
    exec(code_obj, self.user_global_ns, self.user_ns)

  Cell In[2], line 17
    from CoarseNet_model import *

  File ~\Downloads\MinutiaeNet-master\MinutiaeNet-master\CoarseNet\CoarseNet_model.py:615
    print i, img_name[i]
    ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?




ImportError: cannot import name '_obtain_input_shape' from 'keras.applications.imagenet_utils' (C:\Users\2179048\AppData\Local\miniforge3\Lib\site-packages\keras\api\applications\imagenet_utils\__init__.py)
